# sgl

./: .gitmodules  CMakeLists.txt
cmake/: CMakeLists.txt
cmake/lib/c/: CMakeLists.txt
cmake/lib/cpp/: CMakeLists.txt
cmake/main/: CMakeLists.txt
cmake/main/c/: CMakeLists.txt
cmake/main/c/bt/: CMakeLists.txt
cmake/main/cpp/: CMakeLists.txt
cmake/main/cpp/sgl/: CMakeLists.txt
src/lib/cpp/spdlog/details/: os.h
src/main/cpp/io/sdl2/: EventProxy.h  JoystickEventListener.h  KeyboardEventListener.h
src/main/cpp/ks/: File.h  KsTime.h  Settings.h  StringUtils.h
src/main/cpp/sgl/: FontManager.h  Renderer.cpp  Renderer.h  Screen.h  SpriteRenderer.h  TextureManager.cpp
src/main/cpp/sgl/operator/: MenuItem.h
